--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,16 +2,25 @@
 
 client_id = "6e6e6d0940281f0898f8edbc0ee10fcb"
 name = "bundles-app"
-handle = "bundles-app-49"
-application_url = "https://example.com/"
+handle = "easy-bundles-app"
+application_url = "https://13d7-116-58-41-131.ngrok-free.app"
 embedded = true
+
+[build]
+automatically_update_urls_on_dev = true
+dev_store_url = "asads-devstore.myshopify.com"
+include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = ""
+scopes = "write_cart_transforms,write_products"
 
 [auth]
-redirect_urls = [ "https://example.com/api/auth" ]
+redirect_urls = [
+  "https://13d7-116-58-41-131.ngrok-free.app/auth/callback",
+  "https://13d7-116-58-41-131.ngrok-free.app/auth/shopify/callback",
+  "https://13d7-116-58-41-131.ngrok-free.app/api/auth/callback"
+]
 
 [webhooks]
 api_version = "2024-10"
